...
        Жиры - %3$.1f\n
        Углеводы - %4$.1f\n
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
    <string name="open_foodstuff_recipe">Рецепт</string>
    <string name="add_foodstuff_to_history">В журнал</string>
    <string name="include_to_sent_foodstuffs">К отправляемым</string>
    <string name="selected_foodstuffs_snackbar_title_recipe_creation">Создание рецепта</string>
    <string name="selected_foodstuffs_snackbar_title_recipe_editing">Редактирование рецепта</string>
    <string name="send_selected_foodstuffs_to_partner">Отправить продукты партнёру</string>
    <string name="bucket_list_title_recipe_creation">Новый рецепт</string>
    <string name="bucket_list_title_recipe_editing">Редактирование</string>
    <string name="bucket_list_title_recipe">Рецепт</string>
    <string name="bucket_list_title_cooking">Режим готовки</string>
    <string name="bucket_list_action_button_cooking">Режим готовки</string>
    <string name="bucket_list_action_button_add_to_history">В Журнал</string>
...
    <string name="your_code_is_valid_for">Ваш код действителен ещё:</string>
    <string name="successfully_paired_with">Добавлен новый партнёр: %s</string>
    <string name="successfully_paired_with_multiple_partners">Добавлены новые партнёры</string>
    <string name="pairing_request_sent">Запрос отправлен</string>
    <string name="obtain_pairing_code">Получить код</string>
    <string name="partner_with_code_not_found">Пользователь с кодом %s не найден</string>
    <string name="foodstuff_is_sent">Продукт отправлен</string>
    <string name="foodstuff_is_received">Получен продукт: %s</string>
    <string name="show_received_foodstuff">Показать</string>

    <string name="cancel_recipe_creation_dialog_title">Удалить создаваемый рецепт?</string>
    <string name="cancel_recipe_editing_dialog_title">Удалить внесённые изменения?</string>
    <string name="cancel_recipe_dialog_confirmation">Да</string>
    <string name="cancel_recipe_dialog_cancellation">Отмена</string>
    <string name="recipe_deletion_dialog_title">Удалить рецепт?</string>
...
