...
        custom:layout_constraintLeft_toRightOf="@id/carbs_guide_view"
        custom:layout_constraintRight_toRightOf="parent"/>

    <!--табличка БЖУК-->

    <include
        android:id="@+id/protein_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/protein_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
    <include
        android:id="@+id/fats_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/fats_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
    <include
        android:id="@+id/carbs_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/carbs_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
    <include
        android:id="@+id/calories_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/calories_guide_view"
...
